--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello running world</h1>
+    <header>
+        Header content
+        </header>
+    <section>
+        Main image
+        </section>
+    <section>
+        Club ethos
+        </section>
+    <section>
+        Running locations, distances, times
+        </section>
+    <footer>
+        social links here
+
+    </footer>
 </body>
 </html>
