--- a/index.html
+++ b/index.html
@@ -118,7 +118,20 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="visit our youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></i></a>
+            </li>
+        </ul>
 
     </footer>
 
